automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -392,6 +392,7 @@
           "12. Iguazu Falls"
          ],
          "type": "bar",
+         "uid": "fe13d742-d17c-11e8-a085-0242ac110013",
          "x": [
           "1. Buenos Aires",
           "2. Toronto",
@@ -425,10 +426,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"bc6df1fc-0fc3-4d39-a64b-ab86f251f896\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bc6df1fc-0fc3-4d39-a64b-ab86f251f896\", [{\"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [\"2891000\", \"2800000\", \"2581000\", \"928850\", \"559277\", \"287651\", \"84554\", \"60000\", \"32237\", \"4000\", \"1700\", \"0\"], \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"type\": \"bar\", \"name\": \"populations\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"843fa506-2df9-4edf-b629-893d26ec216d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"843fa506-2df9-4edf-b629-893d26ec216d\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [\"2891000\", \"2800000\", \"2581000\", \"928850\", \"559277\", \"287651\", \"84554\", \"60000\", \"32237\", \"4000\", \"1700\", \"0\"], \"type\": \"bar\", \"uid\": \"fe178928-d17c-11e8-a085-0242ac110013\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"bc6df1fc-0fc3-4d39-a64b-ab86f251f896\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bc6df1fc-0fc3-4d39-a64b-ab86f251f896\", [{\"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [\"2891000\", \"2800000\", \"2581000\", \"928850\", \"559277\", \"287651\", \"84554\", \"60000\", \"32237\", \"4000\", \"1700\", \"0\"], \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"type\": \"bar\", \"name\": \"populations\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"843fa506-2df9-4edf-b629-893d26ec216d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"843fa506-2df9-4edf-b629-893d26ec216d\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [\"2891000\", \"2800000\", \"2581000\", \"928850\", \"559277\", \"287651\", \"84554\", \"60000\", \"32237\", \"4000\", \"1700\", \"0\"], \"type\": \"bar\", \"uid\": \"fe178928-d17c-11e8-a085-0242ac110013\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +471,7 @@
        " '672']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
